ProTrackDev/force-app/main/default/objects/TR_User_Story__c/TR_User_Story__c.object-meta.xml
<CustomObject>
    <label>User Story</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>