ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>TR_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>