ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Allocated_Release__c.field-meta.xml
<CustomField>
    <fullName>TR_Allocated_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically populated when you fill in the allocated Sprint</inlineHelpText>
    <label>Allocated Release</label>
    <referenceTo>TR_Release__c</referenceTo>
    <relationshipLabel>Allocated User Stories</relationshipLabel>
    <relationshipName>Allocated_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>