ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Allocated_Sprint__c.field-meta.xml
<CustomField>
    <fullName>TR_Allocated_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Once it has been agreed with the client which sprint will be accommodated for this User Story, use this field to keep this information</inlineHelpText>
    <label>Allocated Sprint</label>
    <referenceTo>TR_Sprint__c</referenceTo>
    <relationshipLabel>Allocated User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>