ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Approver__c.field-meta.xml
<CustomField>
    <fullName>TR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the approver for this user story</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories2</relationshipName>
    <type>Lookup</type>
</CustomField>