ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_As_a__c.field-meta.xml
<CustomField>
    <fullName>TR_As_a__c</fullName>
    <inlineHelpText>The main user type(s) this user story is for</inlineHelpText>
    <label>As a</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>