ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>TR_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>