ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>TR_Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>