ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Business_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>TR_Business_Dependencies__c</fullName>
    <description>Fill in here the Business Dependencies</description>
    <label>Business Dependencies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>