ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>TR_Cancellation_Reason__c</fullName>
    <inlineHelpText>The reason this User Story is no longer being considered as valid. This should only be used if the User Story Status has been set to Cancelled</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>