ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Comment__c.field-meta.xml
<CustomField>
    <fullName>TR_Comment__c</fullName>
    <label>Technical Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>