ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>