ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Developer__c.field-meta.xml
<CustomField>
    <fullName>TR_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>