ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Epic_Name__c.field-meta.xml
<CustomField>
    <fullName>TR_Epic_Name__c</fullName>
    <formula>TR_Epic_Ref__r.TR_Epic_Name__c</formula>
    <label>Epic Name</label>
    <type>Text</type>
</CustomField>