ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Epic_Ref__c.field-meta.xml
<CustomField>
    <fullName>TR_Epic_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The high level functionality that this user story could be grouped under</inlineHelpText>
    <label>Epic Ref</label>
    <referenceTo>TR_Epic__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>