ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Est_Development_mandays__c.field-meta.xml
<CustomField>
    <fullName>TR_Est_Development_mandays__c</fullName>
    <label>Est. Development (mandays)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>