ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TR_External_ID__c</fullName>
    <description>External ID of the User Story</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>