ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_I_want_to__c.field-meta.xml
<CustomField>
    <fullName>TR_I_want_to__c</fullName>
    <inlineHelpText>What the user need to achieve E.g. I want to...be able to search customer on different fields (e.g. first name, address) in my territory</inlineHelpText>
    <label>I want to</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>