ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Is_Ad_Hoc_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_Is_Ad_Hoc_User_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is used to determine if the user story has been created ad-hoc. Usually ad-hoc user stories are user stories we create a sprint as pending items from previous sprint, for instance</inlineHelpText>
    <label>Is Ad Hoc User Story</label>
    <type>Checkbox</type>
</CustomField>