ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_IsTechnical_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_IsTechnical_User_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox checked if the user story is a technical user story (meaning user story has not been directly requested by Business)</inlineHelpText>
    <label>Technical User Story</label>
    <type>Checkbox</type>
</CustomField>