ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>TR_Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>US_Peer_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>