ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Pending_Business_Inputs__c.field-meta.xml
<CustomField>
    <fullName>TR_Pending_Business_Inputs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check that checkbox if this user story is blocked because pending Business Inputs</description>
    <inlineHelpText>Check this checkbox if this user story needs Business Inputs to be finalised. Add the list of items to be finalised in the text field &quot;Business Dependencies&quot;</inlineHelpText>
    <label>Pending Business Inputs</label>
    <type>Checkbox</type>
</CustomField>