ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Pending_Tech_Inputs__c.field-meta.xml
<CustomField>
    <fullName>TR_Pending_Tech_Inputs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if this user story needs Business Inputs to be finalised. Add the list of items to be finalised in the text field &quot;Technical Dependencies&quot;</inlineHelpText>
    <label>Pending Tech Inputs</label>
    <type>Checkbox</type>
</CustomField>