ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Pre_Manual_Steps__c.field-meta.xml
<CustomField>
    <fullName>TR_Pre_Manual_Steps__c</fullName>
    <label>PRE Manual Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>