ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Priority__c.field-meta.xml
<CustomField>
    <fullName>TR_Priority__c</fullName>
    <inlineHelpText>The relative priority of this User Story. 1 is the most important, 99 is the least. This can be used during Sprint Planning</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>