ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Product_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>TR_Product_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business/Product Owner for this User Story</inlineHelpText>
    <label>Product / Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>