ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Project__c.field-meta.xml
<CustomField>
    <fullName>TR_Project__c</fullName>
    <inlineHelpText>The Project responsible for delivering this User Story</inlineHelpText>
    <label>Project</label>
    <referenceTo>TR_Project__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>