ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Proposed_Release__c.field-meta.xml
<CustomField>
    <fullName>TR_Proposed_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically populated when you fill in the proposed sprint</inlineHelpText>
    <label>Proposed Release</label>
    <referenceTo>TR_Release__c</referenceTo>
    <relationshipLabel>Proposed User Stories</relationshipLabel>
    <relationshipName>Proposed_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>