ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Proposed_Sprint__c.field-meta.xml
<CustomField>
    <fullName>TR_Proposed_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Following Release Planning this User Story can be proposed for a particular sprint. Stories can the be taken in or rejected from this sprint during the Sprint Planning process, as determined by the Product Owner</inlineHelpText>
    <label>Proposed Sprint</label>
    <referenceTo>TR_Sprint__c</referenceTo>
    <relationshipLabel>Proposed User Stories</relationshipLabel>
    <relationshipName>Proposed_Sprint</relationshipName>
    <type>Lookup</type>
</CustomField>