ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Related_User_Story__c.field-meta.xml
<CustomField>
    <fullName>TR_Related_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User Story</label>
    <referenceTo>TR_User_Story__c</referenceTo>
    <relationshipLabel>Related User Stories</relationshipLabel>
    <relationshipName>Related_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>