ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_So_that__c.field-meta.xml
<CustomField>
    <fullName>TR_So_that__c</fullName>
    <inlineHelpText>Please enter the business value of this User Story. This helps the Developers and Business Analysts understand the important essence of what the user needs to ultimately achieve.</inlineHelpText>
    <label>So that</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>