ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Sprint_Tester__c.field-meta.xml
<CustomField>
    <fullName>TR_Sprint_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Tester responsible for testing this User Story during the sprint</inlineHelpText>
    <label>Sprint Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories4</relationshipName>
    <type>Lookup</type>
</CustomField>