ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <label>0-Backlog</label>
            </value>
            <value>
                <fullName>Story Definition</fullName>
                <label>1-Story Definition</label>
            </value>
            <value>
                <fullName>Ready for Design</fullName>
                <label>2-Ready for Design</label>
            </value>
            <value>
                <fullName>In Design</fullName>
                <label>3-In Design</label>
            </value>
            <value>
                <fullName>Ready for Development</fullName>
                <label>4-Ready for Development</label>
            </value>
            <value>
                <fullName>In Development</fullName>
                <label>5-In Development</label>
            </value>
            <value>
                <fullName>Ready for Sprint Demo</fullName>
                <label>6-Ready for Sprint Demo</label>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
                <label>7-Ready for Deployment</label>
            </value>
            <value>
                <fullName>In Sprint Testing</fullName>
                <label>8-In Sprint Testing</label>
            </value>
            <value>
                <fullName>DONE</fullName>
                <label>9-DONE</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>99-Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>