ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Story_Point__c.field-meta.xml
<CustomField>
    <fullName>TR_Story_Point__c</fullName>
    <inlineHelpText>The level of complexity as estimated in Story Points related to force.com development</inlineHelpText>
    <label>Story Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>