ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Story_Title__c.field-meta.xml
<CustomField>
    <fullName>TR_Story_Title__c</fullName>
    <label>Story Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>