ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Technical_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>TR_Technical_Dependencies__c</fullName>
    <inlineHelpText>Fill in here the technical Dependencies</inlineHelpText>
    <label>Technical Dependencies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>