ProTrackDev/force-app/main/default/objects/TR_User_Story__c/fields/TR_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>TR_Work_Type__c</fullName>
    <label>Work Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Tableau CRM</fullName>
            </value>
            <value>
                <fullName>Social Studio</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>