ProTrackDev/force-app/main/default/objects/TR_User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_External_ID__c</columns>
    <columns>TR_Epic_Name__c</columns>
    <columns>TR_Story_Title__c</columns>
    <columns>TR_Status__c</columns>
    <columns>TR_Allocated_Sprint__c</columns>
    <columns>TR_Proposed_Sprint__c</columns>
    <columns>TR_Developer__c</columns>
    <columns>TR_Work_Type__c</columns>
    <columns>TR_Pending_Business_Inputs__c</columns>
    <columns>TR_Pending_Tech_Inputs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>